--- a/project1.html
+++ b/project1.html
@@ -144,6 +144,18 @@
                 transform: translateY(0);
             }
         }
+
+        #description {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #333344;
+            color: #f0f0f0;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
     </style>
 </head>
 <body>
@@ -154,8 +166,7 @@
 
     <div class="container">
         <h2>Description</h2>
-        <p>Description of the artwork, the concept behind it, and materials used. This sculpture was crafted with precision and creativity, capturing the essence of its intended theme. The texture, colors, and form are meticulously chosen to represent an emotional journey that resonates with viewers on multiple levels.</p>
-        <p>Additional details about the project, such as inspiration, process, and artist's statement. The artist was inspired by the interplay of natural elements and the human experience, exploring the boundaries of form and emotion through abstract representation. This piece aims to evoke contemplation and curiosity, inviting the audience to create their own interpretations.</p>
+        <p>Rhizome is an endless network of invisible connections that spread deeply within society, weaving together the fabric of identities and powers."</p>
 
         <!-- Centered Image Gallery with Two Images per Row -->
         <div class="image-gallery">
@@ -165,13 +176,33 @@
             <img src="Rhizome%20collection/R4.jpg" alt="Sculpture 4">
             <img src="Rhizome%20collection/R5.jpg" alt="Sculpture 5">
             <img src="Rhizome%20collection/R6.jpg" alt="Sculpture 6">
-            <img src="Rhizome%20collection/R7.jpg" alt="Sculpture 7">
-            <img src="Rhizome%20collection/R8.jpg" alt="Sculpture 8">
+            <img src="Rhizome%20collection/R7.jpg" alt="Sculpture 6">
+            <img src="Rhizome%20collection/R8.jpg" alt="Sculpture 6">
             <img src="Rhizome%20collection/R-1.jpg" alt="Sculpture -1">
             <img src="Rhizome%20collection/R-2.jpg" alt="Sculpture -2">
             <img src="Rhizome%20collection/R-3.jpg" alt="Sculpture -3">
             <img src="Rhizome%20collection/R-4.jpg" alt="Sculpture -4">
             <img src="Rhizome%20collection/R-5.jpg" alt="Sculpture -5">
+        </div>
+
+
+        <div id="description">
+            <h2 class="fancy-heading1">About this collection</h2>
+            <p>
+The structures within the *"Rhizome"* collection emerge from a singular, foundational form. Each form in these works symbolizes an individual, an institution, or a segment of a real society; while independently distinct, they are simultaneously part of a larger, more intricate network. These interconnected and intertwined structures reflect the endless and networked mentality of human societies.
+            </p>
+            <p>
+These networks symbolically represent the do's, don'ts, taboos, and traditions that surround societies and continually expand over time. Every society, no matter how resilient or impenetrable, eventually understands and accepts these structures and unwritten rules. Yet, this infinite expansion of limitations and regulations also carries a subtle threat—one that calls for questioning and reflection.
+            </p>
+          <p>
+The Rhizome collection invites the audience to contemplate these hidden and complex relationships; to consider how these networks, norms, and restrictions expand across various levels of society, and how each individual or institution plays a role in this evolving structure. The works in this collection are designed to convey a sense of entanglement and social constraint, while also creating a space for reflection and thought about these expanding structures. Ultimately, these pieces serve as a call to examine and challenge the unseen networks shaping society.
+          </p>
+                    <p>
+Thiscollection is built around a unified and cohesive form; each piece acts as a symbol of an individual, an institution, or a part of a real society. Within this collection, complex and interconnected structures emerge from this form, spreading in a tangled and networked manner. These rhizomatic structures are a metaphor for the endless networks of social mentalities, as introduced by Deleuze and Guattari as an organic and dynamic concept. In this view, rhizomes expand not linearly, but in multifaceted and plural ways, unbound by any beginning or end.
+                    </p>
+          <p>
+These works reflect the networked mentality, the do's and don'ts, taboos, and traditions that shape societies and expand over time. Every society, no matter how robust or resistant, eventually comprehends and adopts these structures and unwritten rules. These structures, like a web of collective thoughts and perspectives, gradually envelop society, imposing hidden constraints upon it. Yet, this endless expansion of limitations and rules also serves as an invitation to question and reflect upon the current state of affairs.
+          </p>
         </div>
 
         <!-- Back to Top Button -->
