--- a/project2.html
+++ b/project2.html
@@ -144,6 +144,18 @@
                 transform: translateY(0);
             }
         }
+
+        #description {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #333344;
+            color: #f0f0f0;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
     </style>
 </head>
 <body>
@@ -154,8 +166,8 @@
 
     <div class="container">
         <h2>Description</h2>
-        <p>Description of the artwork, the concept behind it, and materials used. This sculpture was crafted with precision and creativity, capturing the essence of its intended theme. The texture, colors, and form are meticulously chosen to represent an emotional journey that resonates with viewers on multiple levels.</p>
-        <p>Additional details about the project, such as inspiration, process, and artist's statement. The artist was inspired by the interplay of natural elements and the human experience, exploring the boundaries of form and emotion through abstract representation. This piece aims to evoke contemplation and curiosity, inviting the audience to create their own interpretations.</p>
+        <p>Tasiyan is a visual manifestation of the contradictions and tensions deeply embedded within culture and society, brought to life in a tangible and poignant form to reveal how these cultural knots can act as heavy barriers to growth and creativity.
+        </p>
 
         <!-- Centered Image Gallery with Two Images per Row -->
         <div class="image-gallery">
@@ -171,6 +183,17 @@
             <img src="Tasian/10.jpg" alt="Sculpture 1">
             <img src="Tasian/wall.jpg" alt="Sculpture 1">
             <img src="Tasian/wall-1.jpg" alt="Sculpture 1">
+        </div>
+
+              <div id="description">
+            <h2 class="fancy-heading1">About this collection</h2>
+            <p>
+This collection draws inspiration from the hidden wounds that permeate the core of culture and society, surfacing as "cultural abscesses." *Tasiyan* seeks to depict the traditions and beliefs that, rather than empowering individuals, entrap them within limiting confines, replacing freedom with fear and restriction. These works echo the struggles of those left powerless under cultural pressures, trapped amidst an overwhelming web of norms and taboos, with their resistance expressed only through these artistic creations.
+            </p>
+            <p>
+The collection raises a fundamental question: how do outdated cultural norms and beliefs transform into psychological and societal burdens that not only restrain individuals but also root themselves in the fabric of society, hindering its progress? Each piece in *Tasiyan* serves as a metaphor for these cultural and social complexes—a space where the line between freedom and restriction painfully emerges.
+            </p>
+
         </div>
 
         <!-- Back to Top Button -->
