--- a/project3.html
+++ b/project3.html
@@ -144,6 +144,18 @@
                 transform: translateY(0);
             }
         }
+
+        #description {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #333344;
+            color: #f0f0f0;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
     </style>
 </head>
 <body>
@@ -154,17 +166,27 @@
 
     <div class="container">
         <h2>Description</h2>
-        <p>Description of the artwork, the concept behind it, and materials used. This sculpture was crafted with precision and creativity, capturing the essence of its intended theme. The texture, colors, and form are meticulously chosen to represent an emotional journey that resonates with viewers on multiple levels.</p>
-        <p>Additional details about the project, such as inspiration, process, and artist's statement. The artist was inspired by the interplay of natural elements and the human experience, exploring the boundaries of form and emotion through abstract representation. This piece aims to evoke contemplation and curiosity, inviting the audience to create their own interpretations.</p>
+        <p> Sudat is where art and philosophy intertwine, an attempt to understand how the accumulated structures and pressures within society eventually give rise to creative and transformative forces.  </p>
 
         <!-- Centered Image Gallery with Two Images per Row -->
         <div class="image-gallery">
-            <img src="Sodat/1so.jpg" alt="Sculpture 1">
-            <img src="Sodat/2so.jpeg" alt="Sculpture 1">
-            <img src="Sodat/3so.jpg" alt="Sculpture 1">
-            <img src="Sodat/4so.jpg" alt="Sculpture 1">
-            <img src="Sodat/5so.jpg" alt="Sculpture 1">
-            <img src="Sodat/6so.jpg" alt="Sculpture 1">
+            <img src="Sodat%20/1so.jpg" alt="Sculpture 1">
+            <img src="Sodat%20/2so.jpeg" alt="Sculpture 1">
+            <img src="Sodat%20/3so.jpg" alt="Sculpture 1">
+            <img src="Sodat%20/4so.jpg" alt="Sculpture 1">
+            <img src="Sodat%20/5so.jpg" alt="Sculpture 1">
+            <img src="Sodat%20/6so.jpg" alt="Sculpture 1">
+
+        </div>
+        <div id="description">
+            <h2 class="fancy-heading1">About this collection</h2>
+            <p>
+The Sudat collection endeavors to depict the tension born from "cultural abscesses," compressed within the fabric of society and the psyche of individuals. These works reflect the hidden, internal forces buried beneath layers of tradition, norms, and social constructs, which, under certain conditions, erupt into visible crises.
+            </p>
+            <p>
+As Jacques Lacan suggests, these "complexes" are rooted in the collective unconscious and embedded within the symbolic structures of society—structures that gradually enclose the individual within a web of obligations and limitations. Lacan believed that human psychology is shaped in interaction with these societal constructs, and any deviation from this framework transforms into a form of social conflict.
+            </p>
+In Sudat* these forces and pressures are represented as "cultural abscesses" formed beneath the surface of society, manifesting explosively and revealing the hidden dynamics of cultural and social crises.
 
         </div>
 
