--- a/project4.html
+++ b/project4.html
@@ -144,6 +144,18 @@
                 transform: translateY(0);
             }
         }
+
+                #description {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #333344;
+            color: #f0f0f0;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
     </style>
 </head>
 <body>
@@ -154,8 +166,9 @@
 
     <div class="container">
         <h2>Description</h2>
-        <p>Description of the artwork, the concept behind it, and materials used. This sculpture was crafted with precision and creativity, capturing the essence of its intended theme. The texture, colors, and form are meticulously chosen to represent an emotional journey that resonates with viewers on multiple levels.</p>
-        <p>Additional details about the project, such as inspiration, process, and artist's statement. The artist was inspired by the interplay of natural elements and the human experience, exploring the boundaries of form and emotion through abstract representation. This piece aims to evoke contemplation and curiosity, inviting the audience to create their own interpretations.</p>
+        <p>
+This collection serves as a metaphor for structures that, while inherently fragile, remain unchanging as long as they are confined within the boundaries of societal norms and beliefs—unless challenged by external pressure.
+        </p>
 
         <!-- Centered Image Gallery with Two Images per Row -->
         <div class="image-gallery">
@@ -171,6 +184,17 @@
             <img src="nejin/10nei.jpg" alt="Sculpture 1">
             <img src="nejin/11nei.jpg" alt="Sculpture 1">
             <img src="nejin/12nei.jpg" alt="Sculpture 1">
+
+        </div>
+
+        <div id="description">
+            <h2 class="fancy-heading1">About this collection</h2>
+            <p>
+Nijin is a collection of artworks that explores the concept of accumulation and evolution within enclosed and restrictive spaces. These pieces, like a cocoon or seed formed in a closed environment, allude to hidden and internal processes—processes invisible to the outside but brimming with the potential for transformation and growth.              </p>
+            <p>
+The central idea of this collection stems from the thought that culture and beliefs, over time, form within a cocoon of norms and limitations. Much like seeds encased in increasingly complex shells, they are poised to bloom or even burst open. Here, *Nijin* symbolizes these accumulations of thought and culture, with each piece embodying the ideologies and beliefs that have been layered within society over time, striving to break free and come to fruition.
+            </p>
+The artworks in this collection depict intricate, interwoven textures crafted from materials such as thread, fibers, and layered fabrics. These materials simultaneously represent the cocoon and the tangled threads of accumulated layers, now ready to emerge in a new and transformed form.
 
         </div>
 
