--- a/project6.html
+++ b/project6.html
@@ -144,6 +144,18 @@
                 transform: translateY(0);
             }
         }
+
+        #description {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #333344;
+            color: #f0f0f0;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
     </style>
 </head>
 <body>
@@ -154,17 +166,26 @@
 
     <div class="container">
         <h2>Description</h2>
-        <p>Description of the artwork, the concept behind it, and materials used. This sculpture was crafted with precision and creativity, capturing the essence of its intended theme. The texture, colors, and form are meticulously chosen to represent an emotional journey that resonates with viewers on multiple levels.</p>
-        <p>Additional details about the project, such as inspiration, process, and artist's statement. The artist was inspired by the interplay of natural elements and the human experience, exploring the boundaries of form and emotion through abstract representation. This piece aims to evoke contemplation and curiosity, inviting the audience to create their own interpretations.</p>
+        <p>On average, each person produces 1 kilogram of waste daily.  </p>
 
         <!-- Centered Image Gallery with Two Images per Row -->
         <div class="image-gallery">
             <img src="Silent%20Kilogram/Silent%20Kilogram1.jpg" alt="Sculpture 1">
             <img src="Silent%20Kilogram/Silent%20Kilogram2.jpg" alt="Sculpture 2">
             <img src="Silent%20Kilogram/Silent%20Kilogram4.jpg" alt="Sculpture 3">
-
         </div>
 
+        <div id="description">
+            <h2 class="fancy-heading1">About this collection</h2>
+            <p>
+As the artist behind this collection, my aim has been to engage the audience with the gravity of an everyday crisis through a simple statement: *"On average, each person produces 1 kilogram of waste daily."* This phrase, repeated throughout the first piece, mirrors the relentless cycle of consumption and accumulation in our lives. Each repetition acts as a mental fragment of waste, gradually increasing its psychological weight on the viewer.
+            </p>
+            <p>
+In the second piece, I sought to visually condense the volume of 1 kilogram of plastic and metal waste into a compact, miniature representation. This reduction in scale symbolizes how these invisible, seemingly insignificant fragments infiltrate our daily lives, masking their true magnitude. By shrinking the actual volume tenfold, I attempt to highlight the stark contradiction between the enormity of their impact and their inconspicuous appearance—a poignant reminder that what remains unseen is not inconsequential.
+            </p>
+Together, these two pieces form a combination of awareness and caution. I want the audience to feel the collective weight of every discarded item: every small piece of trash, every plastic bottle, every disposable package. In the end, they all contribute to a massive mountain of shared responsibility. This collection is an invitation to reflect and reconsider our daily waste production and the responsibility we bear toward the environment.
+
+        </div>
         <!-- Back to Top Button -->
         <a class="button" href="#top"><i class="fas fa-arrow-up"></i> Back to Top</a>
     </div>
