--- a/project7.html
+++ b/project7.html
@@ -144,6 +144,18 @@
                 transform: translateY(0);
             }
         }
+
+                #description {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #333344;
+            color: #f0f0f0;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
     </style>
 </head>
 <body>
@@ -154,14 +166,13 @@
 
     <div class="container">
         <h2>Description</h2>
-        <p>Description of the artwork, the concept behind it, and materials used. This sculpture was crafted with precision and creativity, capturing the essence of its intended theme. The texture, colors, and form are meticulously chosen to represent an emotional journey that resonates with viewers on multiple levels.</p>
-        <p>Additional details about the project, such as inspiration, process, and artist's statement. The artist was inspired by the interplay of natural elements and the human experience, exploring the boundaries of form and emotion through abstract representation. This piece aims to evoke contemplation and curiosity, inviting the audience to create their own interpretations.</p>
+        <p>sheqaq, through its intricate forms, curves, and ruptures, invites the viewer to reflect on critical moments and the experience of conflict.</p>
 
         <!-- Centered Image Gallery with Two Images per Row -->
         <div class="image-gallery">
             <img src="Shaqaq/2.jpg" alt="Sculpture 1">
             <img src="Shaqaq/3.jpg" alt="Sculpture 1">
-            <img src="Shaqaq/DSC0621.jpg" alt="Sculpture 1">
+            <img src="Shaqaq/_DSC0621.jpg" alt="Sculpture 1">
             <img src="Shaqaq/Shaqaq1.jpg" alt="Sculpture 1">
             <img src="Shaqaq/Shaqaq2.jpg" alt="Sculpture 1">
             <img src="Shaqaq/Shaqaq3.jpg" alt="Sculpture 1">
@@ -172,6 +183,17 @@
             <img src="Shaqaq/Shaqaq8.jpg" alt="Sculpture 1">
             <img src="Shaqaq/Shaqaq12.jpg" alt="Sculpture 1">
 
+
+        </div>
+              <div id="description">
+            <h2 class="fancy-heading1">About this collection</h2>
+            <p>
+The sheqaq collection is an attempt to depict moments of fracture and separation, where cohesion disintegrates, and the fissures become expressions of inner and outer conflict. These works, inspired by the profound meaning of the Persian word "شقاق" (sheqaq)—which translates to rift, split, or separation—metaphorically explore the moments and conditions in which unity and harmony unravel, giving rise to new boundaries.
+            </p>
+            <p>
+In these pieces, complex and curved surfaces intertwined with fragmented structures symbolize the struggle to maintain cohesion in the face of opposing forces. Just as *"Schism"* can also signify intellectual or emotional division, this collection delves into the internal challenges of the human psyche, moments of emotional rupture, and the conflicts and differences that create gaps in our connections and perceptions.
+            </p>
+*"Schism"* uses intricate forms, curves, and ruptures to encourage contemplation of critical moments and the experience of tension. These works represent the discord and incompatibilities that can evoke both pain and opportunity, suggesting that every rift reflects a crisis while simultaneously providing a space for the emergence of new meaning.
 
         </div>
 
