--- a/project8.html
+++ b/project8.html
@@ -144,6 +144,18 @@
                 transform: translateY(0);
             }
         }
+
+                #description {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #333344;
+            color: #f0f0f0;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
     </style>
 </head>
 <body>
@@ -154,8 +166,7 @@
 
     <div class="container">
         <h2>Description</h2>
-        <p>Description of the artwork, the concept behind it, and materials used. This sculpture was crafted with precision and creativity, capturing the essence of its intended theme. The texture, colors, and form are meticulously chosen to represent an emotional journey that resonates with viewers on multiple levels.</p>
-        <p>Additional details about the project, such as inspiration, process, and artist's statement. The artist was inspired by the interplay of natural elements and the human experience, exploring the boundaries of form and emotion through abstract representation. This piece aims to evoke contemplation and curiosity, inviting the audience to create their own interpretations.</p>
+        <p>How can urban spaces subtly and persistently dominate human life, psyche, and emotions?  </p>
 
         <!-- Centered Image Gallery with Two Images per Row -->
         <div class="image-gallery">
@@ -176,7 +187,16 @@
 
 
         </div>
-
+        <div id="description">
+            <h2 class="fancy-heading1">About this collection</h2>
+            <p>
+The *Romas* collection delves into the hidden yet profound impacts of urban environments on the human mind and emotions—effects that seep silently yet indelibly into the layers of human psyche. The name "Romas," derived from "Ro" meaning surface and "Mas" implying weight and permanence, reflects these enduring influences that, though seemingly imperceptible, embed themselves deeply in human consciousness and existence.
+            </p>
+            <p>
+In this collection, colossal, lifeless urban structures symbolize these unseen effects, emerging in a cold and impassive backdrop as entities that govern human emotions and states of being. Alongside them, red, floating spheres are introduced—elements striving to find their place within these overwhelming and restrictive frameworks. These spheres act as symbols of memories, emotions, and human endeavors, seeking to assert their identity and presence against the dominance of the urban landscape.
+            </p>
+*Romas* portrays the tension between human needs and the constraints imposed by modern urban structures. This collection invites reflection on the question of how urban spaces can subtly and continuously assert control over human life, psyche, and emotions, leaving behind only echoes of themselves in the form of heavy, enduring memories.
+        </div>
         <!-- Back to Top Button -->
         <a class="button" href="#top"><i class="fas fa-arrow-up"></i> Back to Top</a>
     </div>
