--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -295,7 +295,7 @@
 
             <div class="art-piece">
               <a href="project1.html"> </a>
-                <img src="Rhizome%20collection/R2.JPG" alt="Rhizome">
+                <img src="Rhizome%20collection/R2.jpg" alt="Rhizome">
                 <div>
                   <a href="project1.html">
                     <h3 class="project-title">Rhizome</h3>
@@ -308,7 +308,7 @@
 
             <div class="art-piece">
               <a href="project2.html"> </a>
-                <img src="Tasian/1.JPG" alt="Tassian">
+                <img src="Tasian/1.jpg" alt="Tassian">
                 <div>
                   <a href="project2.html">
                     <h3 class="project-title">Tassian</h3>
@@ -320,7 +320,7 @@
 
             <div class="art-piece">
               <a href="project3.html"> </a>
-                <img src="Sodat%20/1so.JPG" alt="Sodat">
+                <img src="Sodat%20/1so.jpg" alt="Sodat">
                 <div>
                   <a href="project3.html">
                     <h3 class="project-title">Sodat</h3>
@@ -331,7 +331,7 @@
 
             <div class="art-piece">
               <a href="project4.html"> </a>
-                <img src="nejin/10nei.JPG" alt="Nejin">
+                <img src="nejin/10nei.jpg" alt="Nejin">
                 <div>
                   <a href="project4.html">
                     <h3 class="project-title">Nejin</h3>
@@ -342,7 +342,7 @@
 
           <div class="art-piece">
               <a href="project5.html"> </a>
-                <img src="Chronica/5chr.JPG" alt="Chronoca">
+                <img src="Chronica/5chr.jpg" alt="Chronoca">
                 <div>
                   <a href="project5.html">
                     <h3 class="project-title">Chronoca</h3>
