--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -485,27 +485,67 @@
 </div>
 
 
+<div id="contact" class="container">
+    <h2 class="fancy-heading">Contact</h2>
+    <div style="display: flex; justify-content: center; align-items: center; gap: 40px; margin-top: 40px;">
+        <!-- Instagram Icon -->
+        <a href="https://www.instagram.com/mohadese.saber.75/profilecard/?igsh=YW0waXZpZzhwbGE1" target="_blank"
+           style="text-decoration: none; width: 80px; height: 80px; background: #333344; display: flex; justify-content: center; align-items: center; border-radius: 50%; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); transition: all 0.3s ease;" class="icon">
+            <i class="fab fa-instagram" style="font-size: 2em; color: #ffcc00;"></i>
+        </a>
 
-    <div id="contact" class="container">
-        <h2 class="fancy-heading">Contact</h2>
-<!--        <p>Email: <a href="mailto:your.email@example.com" style="color: #ffcc00; text-decoration: none;">your.email@example.com</a></p>-->
+        <!-- Gmail Icon -->
+        <a href="mohadese.sabr@gmail.com"
+           style="text-decoration: none; width: 80px; height: 80px; background: #333344; display: flex; justify-content: center; align-items: center; border-radius: 50%; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); transition: all 0.3s ease;" class="icon">
+            <i class="fas fa-envelope" style="font-size: 2em; color: #ffcc00;"></i>
+        </a>
 
-        <!-- Contact Form -->
-        <form action="#" method="post" style="background: rgba(40, 40, 55, 0.9); padding: 20px; border-radius: 15px; box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4); margin-top: 20px; max-width: 600px; margin-left: auto; margin-right: auto;">
-            <label for="name" style="display: block; font-weight: bold; color: #eaeaea; margin-bottom: 10px;">Name:</label>
-            <input type="text" id="name" name="name" required style="width: 100%; padding: 10px; margin-bottom: 20px; border: none; border-radius: 5px; background: #2d2d3e; color: #eaeaea;">
+        <!-- LinkedIn Icon -->
+        <a href="https://www.linkedin.com/in/mohadese-saber-64357b204?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app target="_blank"
+           style="text-decoration: none; width: 80px; height: 80px; background: #333344; display: flex; justify-content: center; align-items: center; border-radius: 50%; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); transition: all 0.3s ease;" class="icon">
+            <i class="fab fa-linkedin" style="font-size: 2em; color: #ffcc00;"></i>
+        </a>
 
-            <label for="email" style="display: block; font-weight: bold; color: #eaeaea; margin-bottom: 10px;">Email:</label>
-            <input type="email" id="email" name="email" required style="width: 100%; padding: 10px; margin-bottom: 20px; border: none; border-radius: 5px; background: #2d2d3e; color: #eaeaea;">
+        <!-- Google Scholar Icon -->
+        <a href="https://scholar.google.com/citations?user=covghQcAAAAJ&hl=en&oi=ao" target="_blank"
+           style="text-decoration: none; width: 80px; height: 80px; background: #333344; display: flex; justify-content: center; align-items: center; border-radius: 50%; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); transition: all 0.3s ease;" class="icon">
+            <i class="fas fa-graduation-cap" style="font-size: 2em; color: #ffcc00;"></i>
+        </a>
 
-            <label for="message" style="display: block; font-weight: bold; color: #eaeaea; margin-bottom: 10px;">Message:</label>
-            <textarea id="message" name="message" rows="5" required style="width: 100%; padding: 10px; border: none; border-radius: 5px; background: #2d2d3e; color: #eaeaea;"></textarea>
-
-            <button type="submit" style="margin-top: 20px; padding: 10px 20px; background: #444466; color: #ffcc00; border: none; border-radius: 20px; cursor: pointer; font-weight: bold; transition: all 0.3s;">
-                Submit
-            </button>
-        </form>
+        <!-- WhatsApp Icon -->
+        <a href="https://wa.me/qr/YJUV62HT7KDSI1" target="_blank"
+           style="text-decoration: none; width: 80px; height: 80px; background: #333344; display: flex; justify-content: center; align-items: center; border-radius: 50%; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); transition: all 0.3s ease;" class="icon">
+            <i class="fab fa-whatsapp" style="font-size: 2em; color: #ffcc00;"></i>
+        </a>
     </div>
+
+    <!-- Icon Styling -->
+    <style>
+        .icon {
+            display: inline-block;
+            padding: 20px;
+            border-radius: 50%;
+            background: #333344;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+            text-align: center;
+        }
+
+        .icon:hover {
+            background: linear-gradient(135deg, #ffcc00, #ff6666);
+            box-shadow: 0 8px 16px rgba(255, 204, 0, 0.7);
+            color: #fff;
+            transform: scale(1.1);
+        }
+
+        .icon i {
+            transition: color 0.3s, transform 0.3s;
+        }
+
+        .icon:hover i {
+            transform: rotate(20deg);
+        }
+    </style>
+</div>
 
     <footer>
         <p>&copy; 2024 My Art Portfolio. All Rights Reserved.</p>
@@ -513,7 +553,7 @@
             <a href="https://www.instagram.com/mohadese.saber.75/profilecard/?igsh=YW0waXZpZzhwbGE1" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/mohadese-saber-64357b204?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://scholar.google.com/citations?user=covghQcAAAAJ&hl=en&oi=ao" target="_blank"><i class="fas fa-graduation-cap"></i></a>
-            <a href="mailto:mohadese.sabr@gmail.com" target="_blank"><i class="fas fa-envelope"></i> </a>
+            <a href="mohadese.sabr@gmail.com" target="_blank"><i class="fas fa-envelope"></i> </a>
         </div>
     </footer>
 </body>
